--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
 /out/production/Lab_6/pl/lublin/wsei/java/cwiczenia/Controller.class
 /out/production/Lab_6/pl/lublin/wsei/java/cwiczenia/Main.class
 /out/production/Lab_6/pl/lublin/wsei/java/cwiczenia/sample.fxml
+/out/production/Lab_6/pl/lublin/wsei/java/cwiczenia/console/TestBinCopy.class
+/out/production/Lab_6/pl/lublin/wsei/java/cwiczenia/console/TestBufferedBinCopy.class
+/out/production/Lab_6/pl/lublin/wsei/java/cwiczenia/console/TestNioCopy.class
+/out/production/Lab_6/pl/lublin/wsei/java/cwiczenia/console/CopyFromUrl.class
